--- a/src/componentsCss/employerstyles/addjob.css
+++ b/src/componentsCss/employerstyles/addjob.css
@@ -7,7 +7,7 @@
 .create-job {
   padding: 20px 5%;
   margin: 20px 25%;
-  min-height: 100vh;
+  min-height: 70vh;
   width: 70%;
   background-color: rgb(240, 242, 244);
   border-radius: 3%;
@@ -103,7 +103,13 @@ createdon {
 
 .profile-container {
   padding: 30px;
-  min-height: 93vh;
+  min-height: 80vh;
+  margin-top: 10%;
+  overflow: hidden;
+  background-color: #336a80;
+  margin-left: 10%;
+  width: 80%;
+  color: #fff;
 }
 
 .profile-heading {
@@ -113,11 +119,14 @@ createdon {
 
 .profile-paper {
   padding: 20px;
-  outline: none;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 3px solid #fff;
+  text-align: center;
+  min-height: 100vh;
+  border-radius: 10px;
 }
 
 .input-container {
