--- a/src/pages.css/contact.css
+++ b/src/pages.css/contact.css
@@ -7,7 +7,7 @@
       rgba(152, 191, 233, 0.9),
       rgba(73, 85, 180, 0.9)
     ),
-    url(background.jpg);
+    url("../images/background.jpg");
 
   height: 95vh;
   background-size: cover;
@@ -184,7 +184,7 @@ textarea.ng-valid {
       rgba(21, 22, 29, 0.9),
       rgba(21, 22, 29, 0.9)
     ),
-    url(background.jpg);
+    url("../images/background.jpg");
   background-size: cover;
   transition: all 1.5s ease;
 }
