--- a/src/pages.css/contact.css
+++ b/src/pages.css/contact.css
@@ -164,7 +164,9 @@ textarea.ng-valid {
 .hover-img:hover {
   transform: scale(1.1);
 }
-
+.hover-img {
+  height: 2rem;
+}
 .wrapper {
   width: 100%;
   height: 100vh;
