--- a/src/componentsCss/UserProfile.css
+++ b/src/componentsCss/UserProfile.css
@@ -42,7 +42,7 @@
   height: 100%;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
-  padding: 20px 30px;
+  padding: 20px 20px;
   box-sizing: border-box;
 }
 /*left-side-start*/
@@ -259,6 +259,7 @@ select {
   color: #fff;
   cursor: pointer;
   font-weight: bold;
+  padding: 10px;
 }
 
 .button_space {
