--- a/src/pages.css/contact.css
+++ b/src/pages.css/contact.css
@@ -164,9 +164,9 @@ textarea.ng-valid {
 .hover-img:hover {
   transform: scale(1.1);
 }
-.hover-img {
-  font-size: 35px;
-}
+/* .hover-img {
+  font-size: 15px;
+} */
 .wrapper {
   width: 100%;
   height: 100vh;
