--- a/src/pages/Tasks/tasks.css
+++ b/src/pages/Tasks/tasks.css
@@ -202,7 +202,7 @@
   display: block;
   overflow: hidden;
   padding: 15px;
-  text-align: right;
+  text-align: center;
   margin: 0 5px;
   background: transparent;
   text-transform: uppercase;
