--- a/src/componentsCss/singlejob.css
+++ b/src/componentsCss/singlejob.css
@@ -1,7 +1,9 @@
+.details-job {
+  margin-bottom: 10px;
+}
 .job-title {
-  font-weight: 500;
+  font-weight: 700;
   font-size: 1.2rem;
-  font-family: "Poppins", "sans-serif";
 }
 
 .jobtitle2 {
