added mobile version and restricted pages

--- a/src/componentsCss/Bars/navbar.css
+++ b/src/componentsCss/Bars/navbar.css
@@ -102,6 +102,7 @@ nav a:hover {
 @media (min-width: 576px) and (max-width: 767px) {
   .navbar-bg-class {
     height: 60px;
+    width: 500px;
   }
 
   .nav-text {
